--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,27 @@
 blinker==1.9.0
 click==8.1.8
+filelock==3.19.1
 Flask==3.1.1
+fsspec==2025.9.0
 gunicorn==23.0.0
+imageio==2.37.0
+importlib_metadata==8.7.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
+lazy_loader==0.4
 MarkupSafe==3.0.2
+mpmath==1.3.0
+networkx==3.2.1
 numpy==1.26.4
 opencv-python==4.9.0.80
+packaging==25.0
 pillow==11.3.0
 scikit-image==0.24.0
 scipy==1.13.1
+sympy==1.14.0
 tifffile==2024.8.30
 torch==2.2.2
 torchvision==0.17.2
+typing_extensions==4.15.0
 Werkzeug==3.1.3
+zipp==3.23.0
