--- a/.nixpacks.toml
+++ b/.nixpacks.toml
@@ -1,3 +1,3 @@
 [phases.setup]
 nixpkgs = ["pkgs.python312", "pkgs.opencv"]
-libraries = ["libglvnd", "libxrender"]
+libraries = ["libglvnd", "libxrender", "libjpeg", "libpng", "libtiff", "libwebp"]
