--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ MarkupSafe==3.0.2
 mpmath==1.3.0
 networkx==3.2.1
 numpy==1.26.4
-opencv-python==4.9.0.80
+opencv-python-headless==4.9.0.80
 packaging==25.0
 pillow==11.3.0
 scikit-image==0.24.0
